--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     grow as person and as a student. I believe that we set our own limitations and wish to keep an open minded mindset for years to come. I have 
     some experience with coding but would have not yet gotten used to it. I wish to strengthen my knowledge through this course</p>
     <h2>My interests!</h2>
-      <ul>
-        <li>I enjoy trying new foods as you learn more about different cultures.</li>
-        <li>I love vistiting new places especially outdoor areas.</li>
-        <li>Spring is my favorite season.</li>
-      </ul>
+      <p>
+       I enjoy trying new foods as you learn more about different cultures.
+       I love vistiting new places especially outdoor areas.
+       Spring is my favorite season.
+      </p>
   </body>
 </html>
